# EEGStreamer

./: README.md  pyproject.toml
src/eegstreamer/: __example__.py  __init__.py  __muse_monitor__.py  __osc_monitor__.py  __shell__.py  data.py  eeg_analysis.py  encoders.py  inputs.py  outputs.py  transforms.py
tests/: environment.py  matchers.py
tests/features/: file_streaming.feature  muse_streaming.feature  osc_streaming.feature  power_coherence_transformer.feature  screen_streaming.feature
tests/fixtures/: muse_csv_data.eeg  muse_json_data.eeg
tests/steps/: given_inputs.py  given_outputs.py  given_transforms.py  then.py  when.py
